# ai-engineer-assessment-penny

./: .env.example  README.md  pyproject.toml
scripts/: load_to_mongodb.py  load_to_sqlite.py
src/: db.py  llm.py  main.py  prepare_data.py  prompts.py  utils.py
