[project]
name = "ai-engineer-assessment-penny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.7.1",
    "openai>=1.55.3",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    "pymongo>=4.10.1",
    "sqlalchemy>=2.0.36",
]
